--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
   <title>О себе</title>
 </head>
 
@@ -48,11 +49,9 @@
 
     <section class="main">
       <p class="main__description">
-        Привет! Я обладаю знаниями в HTML, CSS, JavaScript и фреймворках, таких как React и Angular. Я всегда стараюсь
-        быть в курсе последних технологических тенденций и постоянно улучшать свои навыки. Люблю работать в команде
-        и готов делиться своими знаниями и опытом с коллегами. Я также умею работать с различными инструментами
-        и библиотеками, такими как Bootstrap, jQuery, Sass и другие. Я готов принять любой вызов и настроен
-        на постоянное развитие в своей профессии
+        Привет! Я имею опыт разработки на нативных HTML, CSS, JavaScript, а также фреймворках, таких как React и Next.
+        В разработке стараюсь всегда применять наиболее современные методы и подходы. Также, в большинстве проектов использую Typescript и Jest.
+        Люблю изучать новые технологии и постоянно углубляю свои знания в уже изученных.
       </p>
       <div class="main__full-inform">
         <img src="./images/blackArrow.svg" class="black-arrow" alt="стрелка" width="60px" height="20px">
