--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section class="main">
       <p class="main__description">
-        Привет! Я имею опыт разработки на нативных HTML, CSS, JavaScript, а также фреймворках, таких как React и Next.
+        Привет! Я имею опыт разработки на нативных HTML, CSS, JavaScript, а также с использованием фреймворков, таких как React и Next.
         В разработке стараюсь всегда применять наиболее современные методы и подходы. Также, в большинстве проектов использую Typescript и Jest.
         Люблю изучать новые технологии и постоянно углубляю свои знания в уже изученных.
       </p>
