--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img src="./images/logo-2.png" alt="Лого">
       <img src="./images/logo-3.png" alt="Лого">
     </header>
-    
+
     <section class="profile">
       <div class="profile__image-wrapper">
         <img src="./images/photo.jpg" class="profile-image" alt="Фото профиля" width="100%" height="100%">
@@ -49,9 +49,10 @@
 
     <section class="main">
       <p class="main__description">
-        Привет! Я имею опыт разработки на нативных HTML, CSS, JavaScript, а также с использованием фреймворков, таких как React и Next.
-        В разработке стараюсь всегда применять наиболее современные методы и подходы. Также, в большинстве проектов использую Typescript и Jest.
-        Люблю изучать новые технологии и постоянно углубляю свои знания в уже изученных.
+        Привет! Я имею опыт разработки на нативных HTML, CSS, JavaScript, а также с использованием фреймворков, таких
+        как React и Next. В качестве стейт-менеджера предпочитаю Redux.
+        В разработке стараюсь всегда применять наиболее современные методы и подходы. Также, в большинстве проектов
+        использую Typescript и Jest. Люблю изучать новые технологии и постоянно углубляю свои знания в уже изученных.
       </p>
       <div class="main__full-inform">
         <img src="./images/blackArrow.svg" class="black-arrow" alt="стрелка" width="60px" height="20px">
